# lseg

./: .gitignore  README.md  fft.py  gbm.py  main.py  pyproject.toml  testing.ipynb
data/: Iușan_Ursu.csv  Nume1_Nume2_Nume3.csv  Price_History_2025.xlsx  data_with_ti.csv
lseg/: evals.py  main.py  models.py  out.py  plot_utils.py
notebooks/: exploration.ipynb  lseg_hackathon.ipynb  results.ipynb  testing.ipynb
src/: main.py  metrics.py  preprocessing.py
