[tool.poetry]
name = "lseg"
version = "0.1.0"
description = "Code for the LSEG event."
authors = ["Lucian Ursu <lucian.ursu@gmail.com>"]
readme = "README.md"
packages = [{ include = "lseg" }]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.4"
matplotlib = "^3.10.1"
scipy = "^1.15.2"
pandas = "^2.2.3"
jupyter = "^1.1.1"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
